--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - gcloud config set project kuberisbest
   - gcloud config set compute/zone europe-north1-a
   - gcloud container clusters get-credentials cluster-1
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   - docker build -t timramone/react-test -f ./client/Dockerfile.dev ./client
 
 script:
